# docs/swagger.yaml
@@ -959,6 +959,9 @@ definitions:
         type: number
       id:
         type: integer
+      id_anuncio:
+        description: ID do anúncio resgatado
+        type: integer
       id_loja:
         type: integer
       id_produto:
@@ -968,6 +971,9 @@ definitions:
       id_usuario:
         type: integer
       id_veiculo:
+        type: integer
+      id_veiculo_usuario:
+        description: Veículo do usuário vinculado ao resgate
         type: integer
       loja:
         $ref: '#/definitions/json.LojaResponse'
@@ -995,6 +1001,10 @@ definitions:
         type: number
       veiculo:
         $ref: '#/definitions/json.VeiculoResponse'
+      veiculo_usuario:
+        allOf:
+        - $ref: '#/definitions/json.VeiculoResponse'
+        description: Veículo do usuário vinculado
     type: object
   json.HistoricoVeiculoResponse:
     properties:
@@ -1467,6 +1477,10 @@ definitions:
   json.ResgatarAnuncioRequest:
     properties:
       id_usuario:
+        type: integer
+      id_veiculo_usuario:
+        description: Veículo do usuário para vincular o resgate (obrigatório para
+          produto/serviço)
         type: integer
     required:
     - id_usuario
@@ -2325,14 +2339,17 @@ paths:
       consumes:
       - application/json
       description: Cria um histórico de resgate com status pendente quando um usuário
-        resgata um anúncio
+        resgata um anúncio. Para anúncios de produto ou serviço, é obrigatório informar
+        o id_veiculo_usuario para vincular o resgate ao veículo do usuário. Quando
+        o resgate for aprovado pela loja, o histórico será automaticamente registrado
+        no veículo.
       parameters:
       - description: ID do anúncio
         in: path
         name: id
         required: true
         type: integer
-      - description: Dados do resgate (ID do usuário)
+      - description: Dados do resgate (ID do usuário e veículo do usuário para produto/serviço)
         in: body
         name: request
         required: true
@@ -2346,7 +2363,7 @@ paths:
           schema:
             $ref: '#/definitions/json.HistoricoResgateResponse'
         "400":
-          description: Dados inválidos
+          description: Dados inválidos ou veículo do usuário não informado para produto/serviço
           schema:
             additionalProperties: true
             type: object
@@ -3503,7 +3520,9 @@ paths:
     put:
       consumes:
       - application/json
-      description: Aprova um resgate pendente, alterando o status para confirmado
+      description: Aprova um resgate pendente, alterando o status para confirmado.
+        Se o resgate tiver um veículo do usuário vinculado (para produtos/serviços),
+        o histórico é automaticamente registrado no veículo.
       parameters:
       - description: ID do histórico de resgate
         in: path
@@ -3514,7 +3533,8 @@ paths:
       - application/json
       responses:
         "200":
-          description: Resgate aprovado com sucesso
+          description: Resgate aprovado com sucesso e histórico do veículo criado
+            (se aplicável)
           schema:
             $ref: '#/definitions/json.HistoricoResgateResponse'
         "400":
