# internal/database/models/historico_resgate.go
@@ -5,9 +5,11 @@ import "time"
 type HistoricoResgate struct {
 	ID               uint       `gorm:"primaryKey"`
 	IDUsuario        uint       `gorm:"not null"`
+	IDAnuncio        *uint      `gorm:"null"` // ID do anúncio resgatado
 	IDProduto        *uint      `gorm:"null"` // Pode ser null se for serviço
 	IDServico        *uint      `gorm:"null"` // Pode ser null se for produto
-	IDVeiculo        *uint      `gorm:"null"` // Pode ser null se for produto/serviço
+	IDVeiculo        *uint      `gorm:"null"` // Pode ser null se for produto/serviço (veículo do anúncio)
+	IDVeiculoUsuario *uint      `gorm:"null"` // Veículo do usuário para vincular o resgate de produto/serviço
 	IDLoja           uint       `gorm:"not null"`
 	TipoResgate      string     `gorm:"size:20;not null"` // "produto", "servico", "veiculo"
 	Quantidade       int        `gorm:"default:1"`        // Quantidade do item
@@ -22,9 +24,11 @@ type HistoricoResgate struct {
 	DataExclusao     *time.Time `gorm:"index"`
 
 	// Relacionamentos
-	Usuario Usuario  `gorm:"foreignKey:IDUsuario"`
-	Produto *Produto `gorm:"foreignKey:IDProduto"`
-	Servico *Servico `gorm:"foreignKey:IDServico"`
-	Veiculo *Veiculo `gorm:"foreignKey:IDVeiculo"`
-	Loja    Loja     `gorm:"foreignKey:IDLoja"`
+	Usuario        Usuario  `gorm:"foreignKey:IDUsuario"`
+	Anuncio        *Anuncio `gorm:"foreignKey:IDAnuncio"` // Anúncio resgatado
+	Produto        *Produto `gorm:"foreignKey:IDProduto"`
+	Servico        *Servico `gorm:"foreignKey:IDServico"`
+	Veiculo        *Veiculo `gorm:"foreignKey:IDVeiculo"`
+	VeiculoUsuario *Veiculo `gorm:"foreignKey:IDVeiculoUsuario"` // Veículo do usuário vinculado
+	Loja           Loja     `gorm:"foreignKey:IDLoja"`
 }
