# internal/handlers/json/historico_resgate_response.go
@@ -5,9 +5,11 @@ import "time"
 type HistoricoResgateResponse struct {
 	ID               uint      `json:"id"`
 	IDUsuario        uint      `json:"id_usuario"`
+	IDAnuncio        *uint     `json:"id_anuncio,omitempty"` // ID do anúncio resgatado
 	IDProduto        *uint     `json:"id_produto,omitempty"`
 	IDServico        *uint     `json:"id_servico,omitempty"`
 	IDVeiculo        *uint     `json:"id_veiculo,omitempty"`
+	IDVeiculoUsuario *uint     `json:"id_veiculo_usuario,omitempty"` // Veículo do usuário vinculado ao resgate
 	IDLoja           uint      `json:"id_loja"`
 	TipoResgate      string    `json:"tipo_resgate"`
 	Quantidade       int       `json:"quantidade"`
@@ -21,11 +23,12 @@ type HistoricoResgateResponse struct {
 	DataAtualizacao  time.Time `json:"data_atualizacao"`
 
 	// Dados relacionados
-	Usuario UserResponse     `json:"usuario,omitempty"`
-	Produto *ProdutoResponse `json:"produto,omitempty"`
-	Servico *ServicoResponse `json:"servico,omitempty"`
-	Veiculo *VeiculoResponse `json:"veiculo,omitempty"`
-	Loja    LojaResponse     `json:"loja,omitempty"`
+	Usuario        UserResponse     `json:"usuario,omitempty"`
+	Produto        *ProdutoResponse `json:"produto,omitempty"`
+	Servico        *ServicoResponse `json:"servico,omitempty"`
+	Veiculo        *VeiculoResponse `json:"veiculo,omitempty"`
+	VeiculoUsuario *VeiculoResponse `json:"veiculo_usuario,omitempty"` // Veículo do usuário vinculado
+	Loja           LojaResponse     `json:"loja,omitempty"`
 }
 
 type HistoricosResgateResponse struct {
